--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
         document.getElementById('operation').value
     )">Calculate</button>
     <div id="answer"></div>
-    <script src='./app.js'></script>
+    <script src="./app.js"></script>
 </body>
 </html>
